<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- A CardView that contains a TextView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/info_text"
                        style="@style/AboutCardTitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/greetings"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="110dp"
                        android:layout_alignParentTop="true"
                        />

                    <TextView
                        android:id="@+id/info_secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="0.5dp"
                        android:layout_below="@+id/info_text"
                        android:layout_alignStart="@+id/info_text"
                        android:layout_alignLeft="@id/info_text"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="13dp"
                        android:text="@string/aboutThisAppTitle"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@string/aboutThisApp'
                        android:textColor="#333"
                        android:lineSpacingExtra="3sp"
                        android:layout_below="@+id/view"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="12dp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iconsInfo"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/about"
                        android:layout_alignStart="@+id/about"
                        android:layout_alignLeft="@id/about"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teisės"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@+id/textView7"
                        android:layout_alignStart="@+id/title"
                        android:layout_alignLeft="@+id/title" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/title"
                        android:background="#e8e8e8" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>